2003-02-11 Wari Wahab <pyblosxom@wari.per.sg>
	* Added a contrib/entryparsers/ directory and basically store what we
	  can handle over there. Users get a standard txt.py entryparser as
	  default
	* Added a modified version of autoping code from Sam Ruby that's cache
	  and entryparsers compliant. Sadly you need to modify one line in the
	  code that states where you you installed pyblosxom (This is not in
	  config)

2003-02-10 Wari Wahab <pyblosxom@wari.per.sg>
	* Added ability for pyblosxom to read entries of different extensions,
	  given a proper extension driver, this means that if you associate
	  .doc files as word documents, and you have libs.entryparsers.doc.py
	  that handles word documents and fill up entryData with the
	  respective data that a template needs, then dropping in such
	  document is easy as creating an entry.
	  Other extensions planned would be XHTML and what nots. These
	  entryparsers do not need to use preformatters, the txt.py '.txt'
	  handler shows how you can use the cache and preformatters if you
	  need it (cache is necesary for slow entryparsers)
	* External utiliies can now use this mechanism to get the data they
	  need to get values from entries other than .txt

2003-02-08 Wari Wahab <pyblosxom@wari.per.sg>
	* Totally restructured the way caching works now. Two types of cache
	  drivers now available, a file pickle (works like pyblosxom 0.6 but
	  you can specify a different directory to store files) and a driver
	  to cache data in a python shelve
	* Optimized pyblosxom.py to not read entries at all when data is
	  already cached

2003-02-07 Wari Wahab <pyblosxom@wari.per.sg>
	* Fixed PATH_INFO data that was actually set when using cgiwrap even
	  if it's empty

2003-02-02 Wari Wahab <pyblosxom@wari.per.sg> pyblosxom 0.6
	* Released as version 0.6

2003-01-29 Wari Wahab <pyblosxom@wari.per.sg>
	* Added configuration override feature in flavours. This allows users