@@ -24,17 +24,20 @@ py['depth'] = 0
 py['num_entries'] = 40
 
 # Trackback data directory (If you install Standalone Trackback Tool)
-py['tb_data'] = '/path/to/tb_data/directory'
+#py['tb_data'] = '/path/to/tb_data/directory'
 
 # Default parser/preformatter. Defaults to plain (does nothing)
-py['parser'] = 'plain'
+#py['parser'] = 'plain'
 
-# Enable Caching? Depends on your directory permissions and whether you use
-# preformatters
-py['cache_enable'] = 0
+# Using Caching? Caching speeds up rendering the page that is going to be
+# shown. Even if you are not using pyblosxom special features, caching can
+# improve rendering speed of certain flavours that can show a large number of
+# files at one time. Choose a cache mechanism you'd like, see the libs/cache/
+# directory, and read the source on how to enable caching with the particular
+# cache driver, you need to set two variables:
+#py['cacheDriver'] = 'xxxx'
+#py['cacheConfig'] = ''
 
-# Cached file extension.
-py['cache_ext'] = '.compiled'
 
 # XML-RPC data
 xmlrpc = {}
@@ -42,8 +45,6 @@ xmlrpc = {}
 xmlrpc['username'] = 'someusername'
 # Password to access this server
 xmlrpc['password'] = 'somepassword'
-# Path call that activates XML-RPC mode
-xmlrpc['path'] = '/RPC2'
 
 __author__ = 'Wari Wahab <wari@wari.per.sg>'
 __version__ = "CVS"
@@ -53,16 +54,3 @@ __copyright__ = "Copyright (c) 2003 Wari Wahab"
 __license__ = "Python"
 py['pyblosxom_version'] = __version__
 py['pyblosxom_name'] = 'pyblosxom'
-
-# Override default configurations
-import os
-if os.path.isfile(configFile):
-    import ConfigParser
-    cp = ConfigParser.ConfigParser()
-    cp.read(configFile)
-    if cp.has_section('pyblosxom'):
-        for key in cp.options('pyblosxom'):
-            py[key] = cp.get('pyblosxom', key).strip()
-    if cp.has_section('xmlrpc'):
-        for key in cp.options('xmlrpc'):
-            xmlrpc[key] = cp.get('xmlrpc', key).strip()
